OrderManager, tests